--- a/TalentCorp/Views/Authentication/Login.cshtml
+++ b/TalentCorp/Views/Authentication/Login.cshtml
@@ -6,7 +6,7 @@
 
 <html lang="es">
 <head>
-    <title>Login</title>
+    <title>Inicio de Sesión</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
@@ -17,17 +17,17 @@
             <div class="col-sm-4">
                 <div class="card">
                     <div class="card-header text-center fw-bold">
-                        Iniciar sesion
+                        Iniciar Sesión
                     </div>
                     <div class="card-body">
                         <form asp-controller="Authentication" asp-action="Login" method="post">
-                            <input class="form-control mb-3" type="text" placeholder="Nombre Usuario" required asp-for="Username" />
+                            <input class="form-control mb-3" type="text" placeholder="Nombre de usuario" required asp-for="Username" />
                             <input class="form-control mb-3" type="password" placeholder="Contraseña" required asp-for="Password" />
                             <div class="d-grid gap-2 mb-3">
                                 <button class="btn btn-primary" type="submit">¡Inicia mi sesión!</button>
                             </div>
                             <div class="text-center">
-                                <a asp-controller="Authentication" asp-action="Registro">¿No tienes una cuenta? ¡Haz clic aquí!</a>
+                                <a asp-controller="Authentication" asp-action="Registro">¿No tienes una cuenta? ¡Haz clíc aquí!</a>
                             </div>
 
                             @if(ViewData["Mensaje"]!=null)
