--- a/TalentCorp/Views/Authentication/Registro.cshtml
+++ b/TalentCorp/Views/Authentication/Registro.cshtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<h2> Login </h2>
+<h2> Registro </h2>
 <div>
     <div class="row mt-5 justify-content-center">
         <div class="col-sm-4">
@@ -20,15 +20,15 @@
                 </div>
                 <div class="card-body">
                     <form asp-controller="Authentication" asp-action="Registro" method="post">
-                        <input class="form-control mb-3" type="text" placeholder="Nombre de Usuario" required asp-for="Username"/>
-                        <input class="form-control mb-3" type="text" placeholder="Correo Electrónico" required asp-for="Email"/>
+                        <input class="form-control mb-3" type="text" placeholder="Nombre de usuario" required asp-for="Username"/>
+                        <input class="form-control mb-3" type="text" placeholder="Correo electrónico" required asp-for="Email"/>
                         <input class="form-control mb-3" type="password" placeholder="Contraseña" required asp-for="Password"/>
-                        <input class="form-control mb-3" type="password" placeholder="Confirmar Contraseña" required/>
+                        <input class="form-control mb-3" type="password" placeholder="Confirmar contraseña" required/>
                         <div class="d-grid gap-2 mb-3">
                             <button class="btn btn-primary" type="submit">¡Regístrame!</button>
                         </div>
                         <div class="text-center">
-                            <a asp-controller="Authentication" asp-action="Login">¿Ya tienes una cuenta? ¡Haz clic aquí!</a>
+                            <a asp-controller="Authentication" asp-action="Login">¿Ya tienes una cuenta? ¡Haz clíc aquí!</a>
                         </div>
                     </form>
                 </div>
