--- a/TalentCorp/Views/Shared/_Layout.cshtml
+++ b/TalentCorp/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Authentication" asp-action="Login">Login</a>
+                        </li
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Candidatoes" asp-action="Index">Candidatos</a>
                         </li>
                     </ul>
                 </div>
