--- a/TalentCorp/Views/Candidatoes/Create.cshtml
+++ b/TalentCorp/Views/Candidatoes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model UniDataHub.Entities.Candidato
+﻿@model TalentCorp.Entities.Candidato
 
 @{
     ViewData["Title"] = "Create";
@@ -7,43 +7,43 @@
 <h1>Create</h1>
 
 <h4>Candidato</h4>
-<hr />
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Cédula" class="control-label"></label>
-                <input asp-for="Cédula" class="form-control" />
+                <input asp-for="Cédula" class="form-control"/>
                 <span asp-validation-for="Cédula" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                <input asp-for="Nombre" class="form-control"/>
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
+                <input asp-for="Apellido" class="form-control"/>
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FechaIngreso" class="control-label"></label>
-                <input asp-for="FechaIngreso" class="form-control" />
+                <input asp-for="FechaIngreso" class="form-control"/>
                 <span asp-validation-for="FechaIngreso" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Departamento" class="control-label"></label>
-                <input asp-for="Departamento" class="form-control" />
+                <input asp-for="Departamento" class="form-control"/>
                 <span asp-validation-for="Departamento" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
+                <input asp-for="Estado" class="form-control"/>
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary"/>
             </div>
         </form>
     </div>
@@ -54,5 +54,5 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
