--- a/TalentCorp/Views/Candidatoes/Index.cshtml
+++ b/TalentCorp/Views/Candidatoes/Index.cshtml
@@ -17,6 +17,7 @@
     <thead>
     <tr>
         <th>
+            <!--Felix estuvo aqui-->
             @Html.DisplayNameFor(model => model.Cédula)
         </th>
         <th>
