--- a/TalentCorp/Views/Shared/_Layout.cshtml
+++ b/TalentCorp/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Candidatoes" asp-action="Index">Candidatos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Puestos" asp-action="Index">Puestos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
