add  all model controllers and views

--- a/TalentCorp/Views/Authentication/Login.cshtml
+++ b/TalentCorp/Views/Authentication/Login.cshtml
@@ -21,8 +21,8 @@
                     </div>
                     <div class="card-body">
                         <form asp-controller="Authentication" asp-action="Login" method="post">
-                            <input class="form-control mb-3" type="text" placeholder="Nombre de usuario" required asp-for="Username" />
-                            <input class="form-control mb-3" type="password" placeholder="Contraseña" required asp-for="Password" />
+                            <input class="form-control mb-3" type="text" placeholder="Nombre de usuario" required asp-for="Nombre" />
+                            <input class="form-control mb-3" type="password" placeholder="Contraseña" required asp-for="Contrasena" />
                             <div class="d-grid gap-2 mb-3">
                                 <button class="btn btn-primary" type="submit">¡Inicia mi sesión!</button>
                             </div>
