--- a/TalentCorp/Views/Educaciones/Delete.cshtml
+++ b/TalentCorp/Views/Educaciones/Delete.cshtml
@@ -1,4 +1,4 @@
-@model TalentCorp.Entities.Puesto
+@model TalentCorp.Entities.Educacion
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,44 +9,44 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Puesto</h4>
+    <h4>Educacion</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
+            @Html.DisplayNameFor(model => model.Nivel)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
+            @Html.DisplayFor(model => model.Nivel)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descripcion)
+            @Html.DisplayNameFor(model => model.Institucion)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descripcion)
+            @Html.DisplayFor(model => model.Institucion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NivelRiesgo)
+            @Html.DisplayNameFor(model => model.Idiomas)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NivelRiesgo)
+            @Html.DisplayFor(model => model.Idiomas)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SalarioMin)
+            @Html.DisplayNameFor(model => model.FechaDesde)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SalarioMin)
+            @Html.DisplayFor(model => model.FechaDesde)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SalarioMax)
+            @Html.DisplayNameFor(model => model.FechaHasta)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SalarioMax)
+            @Html.DisplayFor(model => model.FechaHasta)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
+            @Html.DisplayNameFor(model => model.Candidato)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estado)
+            @Html.DisplayFor(model => model.Candidato.Id)
         </dd>
     </dl>
     
