--- a/TalentCorp/Views/Empleados/Delete.cshtml
+++ b/TalentCorp/Views/Empleados/Delete.cshtml
@@ -1,4 +1,4 @@
-@model TalentCorp.Entities.Puesto
+@model TalentCorp.Entities.Empleado
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,9 +9,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Puesto</h4>
+    <h4>Empleado</h4>
     <hr />
     <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Cedula)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Cedula)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
@@ -19,34 +25,40 @@
             @Html.DisplayFor(model => model.Nombre)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descripcion)
+            @Html.DisplayNameFor(model => model.Apellido)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descripcion)
+            @Html.DisplayFor(model => model.Apellido)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NivelRiesgo)
+            @Html.DisplayNameFor(model => model.FechaIngreso)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NivelRiesgo)
+            @Html.DisplayFor(model => model.FechaIngreso)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SalarioMin)
+            @Html.DisplayNameFor(model => model.Departamento)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SalarioMin)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SalarioMax)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SalarioMax)
+            @Html.DisplayFor(model => model.Departamento)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Estado)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Estado)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Candidato)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Candidato.Id)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Puesto)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Puesto.Id)
         </dd>
     </dl>
     
