--- a/TalentCorp/Views/Empleados/Index.cshtml
+++ b/TalentCorp/Views/Empleados/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<TalentCorp.Entities.Puesto>
+@model IEnumerable<TalentCorp.Entities.Empleado>
 
 @{
     ViewData["Title"] = "Index";
@@ -14,22 +14,28 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Cedula)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Nombre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Descripcion)
+                @Html.DisplayNameFor(model => model.Apellido)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.NivelRiesgo)
+                @Html.DisplayNameFor(model => model.FechaIngreso)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SalarioMin)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SalarioMax)
+                @Html.DisplayNameFor(model => model.Departamento)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Estado)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Candidato)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Puesto)
             </th>
             <th></th>
         </tr>
@@ -38,22 +44,28 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.Cedula)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
+                @Html.DisplayFor(modelItem => item.Apellido)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.NivelRiesgo)
+                @Html.DisplayFor(modelItem => item.FechaIngreso)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SalarioMin)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SalarioMax)
+                @Html.DisplayFor(modelItem => item.Departamento)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Estado)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Candidato.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Puesto.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
