--- a/TalentCorp/Views/Puestos/Create.cshtml
+++ b/TalentCorp/Views/Puestos/Create.cshtml
@@ -1,7 +1,8 @@
-﻿@model TalentCorp.Entities.Puesto
+@model TalentCorp.Entities.Puesto
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Create</h1>
@@ -18,9 +19,9 @@
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Descripción" class="control-label"></label>
-                <input asp-for="Descripción" class="form-control" />
-                <span asp-validation-for="Descripción" class="text-danger"></span>
+                <label asp-for="Descripcion" class="control-label"></label>
+                <input asp-for="Descripcion" class="form-control" />
+                <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NivelRiesgo" class="control-label"></label>
@@ -53,6 +54,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
