--- a/TalentCorp/Views/Candidatos/Index.cshtml
+++ b/TalentCorp/Views/Candidatos/Index.cshtml
@@ -23,7 +23,7 @@
                 @Html.DisplayNameFor(model => model.Apellido)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaIngreso)
+                Fecha de Ingreso
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Departamento)
