--- a/TalentCorp/Views/Educaciones/Index.cshtml
+++ b/TalentCorp/Views/Educaciones/Index.cshtml
@@ -12,30 +12,31 @@
 </p>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nivel)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Institucion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Idiomas)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaDesde)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaHasta)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Candidato)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Nivel)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Institucion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Idiomas)
+        </th>
+        <th>
+            Desde
+        </th>
+        <th>
+            Hasta
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Candidato)
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Nivel)
@@ -53,7 +54,7 @@
                 @Html.DisplayFor(modelItem => item.FechaHasta)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Candidato.Id)
+                @Html.DisplayFor(modelItem => item.Candidato.Nombre)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
@@ -61,6 +62,6 @@
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
