--- a/TalentCorp/Views/Puestos/Delete.cshtml
+++ b/TalentCorp/Views/Puestos/Delete.cshtml
@@ -25,19 +25,19 @@
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NivelRiesgo)
+            Nivel de Riesgo
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NivelRiesgo)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SalarioMin)
+            Salario Minimo
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SalarioMin)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SalarioMax)
+            Salario Maximo
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SalarioMax)
