--- a/TalentCorp/Views/Puestos/Index.cshtml
+++ b/TalentCorp/Views/Puestos/Index.cshtml
@@ -20,13 +20,13 @@
                 @Html.DisplayNameFor(model => model.Descripcion)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.NivelRiesgo)
+                Nivel de Riesgo
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SalarioMin)
+                Salario Minimo
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SalarioMax)
+                Salario Maximo
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Estado)
