--- a/TalentCorp/Views/Candidatos/Details.cshtml
+++ b/TalentCorp/Views/Candidatos/Details.cshtml
@@ -30,7 +30,7 @@
             @Html.DisplayFor(model => model.Apellido)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaIngreso)
+            Fecha de Ingreso
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaIngreso)
