--- a/TalentCorp/Views/Candidatos/Edit.cshtml
+++ b/TalentCorp/Views/Candidatos/Edit.cshtml
@@ -30,7 +30,7 @@
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FechaIngreso" class="control-label"></label>
+                <label asp-for="FechaIngreso" class="control-label">Fecha de Ingreso</label>
                 <input asp-for="FechaIngreso" class="form-control" />
                 <span asp-validation-for="FechaIngreso" class="text-danger"></span>
             </div>
