--- a/TalentCorp/Views/Educaciones/Create.cshtml
+++ b/TalentCorp/Views/Educaciones/Create.cshtml
@@ -14,7 +14,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CandidatoId" class="control-label"></label>
+                <label asp-for="CandidatoId" class="control-label">Candidato</label>
                 <select asp-for="CandidatoId" class ="form-control" asp-items="ViewBag.CandidatoId"></select>
             </div>
             <div class="form-group">
@@ -33,12 +33,12 @@
                 <span asp-validation-for="Idiomas" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FechaDesde" class="control-label"></label>
+                <label asp-for="FechaDesde" class="control-label">Desde</label>
                 <input asp-for="FechaDesde" class="form-control" />
                 <span asp-validation-for="FechaDesde" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FechaHasta" class="control-label"></label>
+                <label asp-for="FechaHasta" class="control-label">Hasta</label>
                 <input asp-for="FechaHasta" class="form-control" />
                 <span asp-validation-for="FechaHasta" class="text-danger"></span>
             </div>
