--- a/TalentCorp/Views/Educaciones/Delete.cshtml
+++ b/TalentCorp/Views/Educaciones/Delete.cshtml
@@ -31,13 +31,13 @@
             @Html.DisplayFor(model => model.Idiomas)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDesde)
+            Desde
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaDesde)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaHasta)
+            Hasta
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaHasta)
@@ -46,7 +46,7 @@
             @Html.DisplayNameFor(model => model.Candidato)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Candidato.Id)
+            @Html.DisplayFor(model => model.Candidato.Nombre)
         </dd>
     </dl>
     
