--- a/TalentCorp/Views/Educaciones/Details.cshtml
+++ b/TalentCorp/Views/Educaciones/Details.cshtml
@@ -45,7 +45,7 @@
             @Html.DisplayNameFor(model => model.Candidato)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Candidato.Id)
+            @Html.DisplayFor(model => model.Candidato.Nombre)
         </dd>
     </dl>
 </div>
