--- a/TalentCorp/Views/Entrevistas/Details.cshtml
+++ b/TalentCorp/Views/Entrevistas/Details.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaEntrevista)
+            Fecha
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaEntrevista)
@@ -21,13 +21,13 @@
             @Html.DisplayNameFor(model => model.Candidato)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Candidato.Id)
+            @Html.DisplayFor(model => model.Candidato.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Puesto)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Puesto.Id)
+            @Html.DisplayFor(model => model.Puesto.Nombre)
         </dd>
     </dl>
 </div>
