--- a/TalentCorp/Views/ExperienciasLaborales/Delete.cshtml
+++ b/TalentCorp/Views/ExperienciasLaborales/Delete.cshtml
@@ -19,19 +19,19 @@
             @Html.DisplayFor(model => model.Empresa)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PuestoOcupado)
+            Puesto
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PuestoOcupado)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDesde)
+            Desde
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaDesde)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaHasta)
+            Hasta
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaHasta)
@@ -46,7 +46,7 @@
             @Html.DisplayNameFor(model => model.Candidato)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Candidato.Id)
+            @Html.DisplayFor(model => model.Candidato.Nombre)
         </dd>
     </dl>
     
