--- a/TalentCorp/Views/ExperienciasLaborales/Details.cshtml
+++ b/TalentCorp/Views/ExperienciasLaborales/Details.cshtml
@@ -9,43 +9,43 @@
 
 <div>
     <h4>ExperienciaLaboral</h4>
-    <hr />
+    <hr/>
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Empresa)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Empresa)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PuestoOcupado)
+        <dt class="col-sm-2">
+            Puesto
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PuestoOcupado)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDesde)
+        <dt class="col-sm-2">
+            Desde
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FechaDesde)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaHasta)
+        <dt class="col-sm-2">
+            Hasta
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FechaHasta)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Salario)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Salario)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Candidato)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Candidato.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Candidato.Nombre)
         </dd>
     </dl>
 </div>
