--- a/TalentCorp/Views/Puestos/Edit.cshtml
+++ b/TalentCorp/Views/Puestos/Edit.cshtml
@@ -25,17 +25,17 @@
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NivelRiesgo" class="control-label"></label>
+                <label asp-for="NivelRiesgo" class="control-label">Nivel de Riesgo</label>
                 <input asp-for="NivelRiesgo" class="form-control" />
                 <span asp-validation-for="NivelRiesgo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SalarioMin" class="control-label"></label>
+                <label asp-for="SalarioMin" class="control-label">Salario Minimo</label>
                 <input asp-for="SalarioMin" class="form-control" />
                 <span asp-validation-for="SalarioMin" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SalarioMax" class="control-label"></label>
+                <label asp-for="SalarioMax" class="control-label">Salario Maximo</label>
                 <input asp-for="SalarioMax" class="form-control" />
                 <span asp-validation-for="SalarioMax" class="text-danger"></span>
             </div>
