front candidatos, login, registro, landing. Con ese front de candidatos nama hay q copia lo disenhos en los otros

--- a/TalentCorp/Views/Home/Index.cshtml
+++ b/TalentCorp/Views/Home/Index.cshtml
@@ -2,7 +2,47 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<style>
+
+
+    .LandingMessage{
+        width:40%;
+       
+
+    }
+
+    .img{
+        background-image: url("https://www.aihr.com/wp-content/uploads/what-is-human-resources-main-cover-image.png");
+        width: 50%;
+        height: 510px;
+        margin-right: 10%;
+        background-size: cover;
+     
+    }
+    
+    .cont{
+        width: 100%;
+        margin-top: 5%;
+        text-align: center;
+        display: flex;
+        justify-content: flex-start;
+        z-index: 1;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-content: center;
+        align-items: center;
+        text-align:justify;
+    }
+
+</style>
+
+<body>
+    <div class="cont">
+    <div class="LandingMessage">
+<h1>Bienvenido a TalentCorp</h1>
+            <p>En TalentCorp, creemos que el corazón de cualquier empresa está en su gente. Nuestro sistema de recursos humanos está diseñado para simplificar y mejorar todos los aspectos de la gestión del talento, desde la contratación hasta el desarrollo profesional.</p>
+
+    </div>
+    <div class="img"></div>
+    </div>
+</body>
