--- a/TalentCorp/Views/Authentication/Login.cshtml
+++ b/TalentCorp/Views/Authentication/Login.cshtml
@@ -10,25 +10,70 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
+
+<style>
+
+
+    .image {
+   background-image: url("https://hrcareerconsultants.com/wp-content/uploads/2021/06/Hr-career-consultants-1200x497.jpg");
+        background-size: cover;
+        filter: blur(5px);
+        position:absolute;
+        width:100%;
+        height: 100%;
+    }
+.card{
+    width: 25%;
+    border-radius:8px;
+    margin-left: 37.5%;
+        margin-right: 37.5%;
+        box-shadow: 0px 0px 5px 5px rgb(0 0 0 / 20%);
+
+        text-align:center;
+ 
+}
+
+.formu{
+        padding-top: 10%;
+        padding-right: 10%;
+        padding-bottom: 10%;
+        padding-left: 10%;
+}
+
+    .formuContent {
+        margin-bottom: 10%;
+     
+    
+    }
+.logo{
+    padding-top:5%;
+    margin-bottom:3%;
+        position: relative;
+       font-weight:bold;
+        text-align: center;
+        color:white;
+}
+
+</style>
+
 <body>
-    <h2> Login </h2>
-    <div>
-        <div class="row mt-5 justify-content-center">
-            <div class="col-sm-4">
+    <div class="image"></div>
+    <div class="logo">
+        <h1>  TalentCorp </h1>
+    </div>
+
                 <div class="card">
-                    <div class="card-header text-center fw-bold">
-                        Iniciar Sesión
-                    </div>
-                    <div class="card-body">
+        <div class="formu" >
+            <h4 class="formuContent" > Iniciar Sesión</h4>
                         <form asp-controller="Authentication" asp-action="Login" method="post">
-                            <input class="form-control mb-3" type="text" placeholder="Nombre de usuario" required asp-for="Nombre" />
-                            <input class="form-control mb-3" type="password" placeholder="Contraseña" required asp-for="Contrasena" />
-                            <div class="d-grid gap-2 mb-3">
-                                <button class="btn btn-primary" type="submit">¡Inicia mi sesión!</button>
-                            </div>
-                            <div class="text-center">
-                                <a asp-controller="Authentication" asp-action="Registro">¿No tienes una cuenta? ¡Haz clíc aquí!</a>
-                            </div>
+                <input class="form-control mb-3 formuContent" type="text" placeholder="Nombre de usuario" required asp-for="Nombre" />
+                <input class="form-control mb-3 formuContent" type="password" placeholder="Contraseña" required asp-for="Contrasena" />
+                       
+                                <button class="btn btn-primary formuContent" type="submit">¡Inicia mi sesión!</button><br />
+
+
+                <a class="formuContent" asp-controller="Authentication" asp-action="Registro">¿No tienes una cuenta? ¡Haz clíc aquí!</a>
+                            
 
                             @if(ViewData["Mensaje"]!=null)
                             {
@@ -38,9 +83,8 @@
                             }
                         </form>
                     </div>
-                </div>
-            </div>
-        </div>
+   
     </div>
+    
 </body>
 </html>
