--- a/TalentCorp/Views/Authentication/Registro.cshtml
+++ b/TalentCorp/Views/Authentication/Registro.cshtml
@@ -9,33 +9,95 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
+
+<style>
+
+
+    .image {
+        background-image: url("https://hrcareerconsultants.com/wp-content/uploads/2021/06/Hr-career-consultants-1200x497.jpg");
+        background-size: cover;
+        filter: blur(5px);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
+
+    .card {
+        width: 60%;
+        border-radius: 8px;
+        margin-left: 20%;
+        margin-right: 20%;
+        box-shadow: 0px 0px 5px 5px rgb(0 0 0 / 20%);
+        text-align: center;
+        display: flex;
+        justify-content: flex-start;
+        z-index: 1;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        align-content: center;
+        align-items: center;
+    }
+
+    .formu {
+        width: 55%;
+        padding-top: 5%;
+        
+        padding-bottom: 5%;
+        padding-left: 10%;
+       
+    }
+
+    .formuContent {
+        margin-bottom: 5%;
+    }
+
+    .logo {
+        padding-top: 5%;
+        margin-bottom: 3%;
+        position: relative;
+        font-weight: bold;
+        text-align: center;
+        color: white;
+        z-index: 1;
+    }
+    .img{
+        background-image: url("https://cdni.iconscout.com/illustration/premium/thumb/human-resources-7142589-5829176.png?f=webp");
+        width: 100%;
+        height: 400px;
+        margin-right: 10%;
+        background-size: cover;
+    
+
+    }
+</style>
+
 <body>
-<h2> Registro </h2>
-<div>
-    <div class="row mt-5 justify-content-center">
-        <div class="col-sm-4">
-            <div class="card">
-                <div class="card-header text-center fw-bold">
-                    Registro
-                </div>
-                <div class="card-body">
-                    <form asp-controller="Authentication" asp-action="Registro" method="post">
-                        <input class="form-control mb-3" type="text" placeholder="Nombre de usuario" required asp-for="Nombre"/>
-                        <input class="form-control mb-3" type="text" placeholder="Correo electrónico" required asp-for="Correo"/>
-                        <input class="form-control mb-3" type="password" placeholder="Contraseña" required asp-for="Contrasena"/>
-                        <input class="form-control mb-3" type="password" placeholder="Confirmar contraseña" required/>
-                        <div class="d-grid gap-2 mb-3">
-                            <button class="btn btn-primary" type="submit">¡Regístrame!</button>
-                        </div>
-                        <div class="text-center">
-                            <a asp-controller="Authentication" asp-action="Login">¿Ya tienes una cuenta? ¡Haz clíc aquí!</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+
+    <div class="image"></div>
+    <div class="logo">
+        <h1>  TalentCorp </h1>
     </div>
-</div>
+
+    <div class="card">
+        <div class="formu">
+            <h4 class="formuContent"> Registrate </h4>
+            <form asp-controller="Authentication" asp-action="Registro" method="post">
+                <input class="form-control mb-3" type="text" placeholder="Nombre de usuario" required asp-for="Nombre" />
+                <input class="form-control mb-3" type="text" placeholder="Correo electrónico" required asp-for="Correo" />
+                <input class="form-control mb-3" type="password" placeholder="Contraseña" required asp-for="Contrasena" />
+                <input class="form-control mb-3" type="password" placeholder="Confirmar contraseña" required />
+                <div class="d-grid gap-2 mb-3">
+                    <button class="btn btn-primary" type="submit">¡Regístrame!</button>
+                </div>
+                <div class="text-center">
+                    <a asp-controller="Authentication" asp-action="Login">¿Ya tienes una cuenta? ¡Haz clíc aquí!</a>
+                </div>
+            </form>
+        </div>
+        <div class="img">
+        </div>
+
+    </div>
 
 </body>
 </html>
