--- a/TalentCorp/Views/Candidatos/Create.cshtml
+++ b/TalentCorp/Views/Candidatos/Create.cshtml
@@ -5,47 +5,78 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<style>
 
-<h4>Candidato</h4>
+    .card {
+        width: 40%;
+        border-radius: 8px;
+        margin-left: 30%;
+        margin-right: 30%;
+        box-shadow: 0px 0px 5px 5px rgb(0 0 0 / 20%);
+        text-align: justify;
+    }
+
+    .formu {
+        padding-top: 5%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+        padding-left: 10%;
+    }
+
+    .formuContent {
+        margin-bottom: 5%;
+    }
+
+    .logo {
+        padding-top: 1%;
+   
+        position: relative;
+        font-weight: bold;
+        text-align: center;
+      
+    }
+</style>
+
+<h3 class="logo">Agregar Candidato</h3>
+
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card">
+    <div class="formu">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="Cédula" class="control-label"></label>
                 <input asp-for="Cédula" class="form-control" />
                 <span asp-validation-for="Cédula" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="Apellido" class="control-label"></label>
                 <input asp-for="Apellido" class="form-control" />
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="FechaIngreso" class="control-label">Fecha de Ingreso</label>
+            <div class="formuContent">
+                <label asp-for="FechaIngreso" class="control-label">Fecha de Solicitud</label>
                 <input asp-for="FechaIngreso" class="form-control" />
                 <span asp-validation-for="FechaIngreso" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="Departamento" class="control-label"></label>
                 <input asp-for="Departamento" class="form-control" />
                 <span asp-validation-for="Departamento" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div style="text-align:right">
+                <input type="submit" value="Agregar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"> <- Regresar </a>
 </div>
 
