--- a/TalentCorp/Views/Candidatos/Delete.cshtml
+++ b/TalentCorp/Views/Candidatos/Delete.cshtml
@@ -5,48 +5,85 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<style>
+
+    .card {
+        width: 40%;
+        border-radius: 8px;
+        margin-left: 30%;
+        margin-right: 30%;
+        box-shadow: 0px 0px 5px 5px rgb(0 0 0 / 20%);
+        text-align: justify;
+        padding-top: 2%;
+        padding-right: 3%;
+        padding-bottom: 2%;
+        padding-left: 3%;
+    }
+
+    .formu {
+    }
+
+    .formuContent {
+        margin-bottom: 5%;
+    }
+
+    .logo {
+        padding-top: 1%;
+        position: relative;
+        font-weight: bold;
+        text-align: center;
+    }
+</style>
+
+
 <div>
-    <h4>Candidato</h4>
+
+    <h3 class="logo">Eliminar candidato</h3>
     <hr />
+    <div class="card">
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Cédula)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Cédula)
         </dd>
-        <dt class = "col-sm-2">
+        <hr />
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nombre)
         </dd>
-        <dt class = "col-sm-2">
+            <hr />
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Apellido)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Apellido)
         </dd>
-        <dt class = "col-sm-2">
-            Fecha de Ingreso
+            <hr />
+        <dt class = "col-sm-5">
+            Fecha de Solicitud
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaIngreso)
         </dd>
-        <dt class = "col-sm-2">
+            <hr />
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Departamento)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Departamento)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
+
+    </div >
+    <br />
+    <form asp-action="Delete" style="text-align:center">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index"><- Regresar</a>
     </form>
 </div>
