--- a/TalentCorp/Views/Candidatos/Index.cshtml
+++ b/TalentCorp/Views/Candidatos/Index.cshtml
@@ -5,14 +5,56 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<style>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+     .card {
+   padding-left:2%;
+        padding-right: 2%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+        border-radius: 8px;
+     
+        box-shadow: 0px 0px 5px 5px rgb(0 0 0 / 20%);
+     
+    }
+
+    .rowOne {
+        border-radius: 8px;
+        background-color: rgba(23, 141, 232, 0.3);
+    }
+    .firstCell{
+        /* top-left | top-right | bottom-right | bottom-left */
+        border-radius: 8px 0 0 8px;
+    }
+
+    .lastCell {
+        /* top-left | top-right | bottom-right | bottom-left */
+        border-radius: 0 8px 8px 0;
+    }
+
+    .headRow{
+        margin-bottom: 20%;
+    }
+    td{
+    
+    padding-bottom: 5%;
+
+    }
+
+    tr {
+       
+        border-bottom: 0pt solid white;
+    }
+
+
+</style>
+
+<h2 style="text-align:center; margin-top:2%; margin-bottom:2%;">Lista de Candidatos</h2>
+
+<div class="card">
 <table class="table">
-    <thead>
-        <tr>
+        <thead class="headRow">
+        <tr >
             <th>
                 @Html.DisplayNameFor(model => model.Cédula)
             </th>
@@ -23,7 +65,7 @@
                 @Html.DisplayNameFor(model => model.Apellido)
             </th>
             <th>
-                Fecha de Ingreso
+                    Fecha de Solicitud
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Departamento)
@@ -31,10 +73,12 @@
             <th></th>
         </tr>
     </thead>
+
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr class="rowOne">
+                    <td class="firstCell">
                 @Html.DisplayFor(modelItem => item.Cédula)
             </td>
             <td>
@@ -49,12 +93,18 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Departamento)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <td class="lastCell">
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Ver detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
+
 }
     </tbody>
 </table>
+</div>
+<br />
+<p>
+    <a asp-action="Create">Agregar nuevo</a>
+</p>
