--- a/TalentCorp/Views/Educaciones/Delete.cshtml
+++ b/TalentCorp/Views/Educaciones/Delete.cshtml
@@ -36,7 +36,7 @@
 </style>
 
 <div>
-    <h3 class="logo">Eliminar candidato</h3>
+    <h3 class="logo">Eliminar educacion</h3>
     <hr />
     <div class="card">
     <dl class="row">
