--- a/TalentCorp/Views/Educaciones/Details.cshtml
+++ b/TalentCorp/Views/Educaciones/Details.cshtml
@@ -36,7 +36,7 @@
 </style>
 
 <div>
-    <h3 class="logo">Detalles del candidato</h3>
+    <h3 class="logo">Detalles de la educacion del candidato</h3>
     <hr />
     <div class="card">
     <dl class="row">
