--- a/TalentCorp/Views/Educaciones/Index.cshtml
+++ b/TalentCorp/Views/Educaciones/Index.cshtml
@@ -96,9 +96,9 @@
                 @Html.DisplayFor(modelItem => item.Candidato.Nombre)
             </td>
              <td class="lastCell">
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Ver detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
     }
