--- a/TalentCorp/Views/Empleados/Details.cshtml
+++ b/TalentCorp/Views/Empleados/Details.cshtml
@@ -5,63 +5,95 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<style>
+
+    .card {
+        width: 40%;
+        border-radius: 8px;
+        margin-left: 30%;
+        margin-right: 30%;
+        box-shadow: 0px 0px 5px 5px rgb(0 0 0 / 20%);
+        text-align: justify;
+        padding-top: 2%;
+        padding-right: 3%;
+        padding-bottom: 2%;
+        padding-left: 3%;
+    }
+
+    .formu {
+    }
+
+    .formuContent {
+        margin-bottom: 5%;
+    }
+
+    .logo {
+        padding-top: 1%;
+        position: relative;
+        font-weight: bold;
+        text-align: center;
+    }
+</style>
 
 <div>
-    <h4>Empleado</h4>
+    <h4>Detalles del empleado</h4>
     <hr />
+    <div class="card">
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.Cedula)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Cedula)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nombre)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.Apellido)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Apellido)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.FechaIngreso)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaIngreso)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.Departamento)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Departamento)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.Estado)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Estado)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.Candidato)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Candidato.Id)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.Puesto)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Puesto.Id)
         </dd>
     </dl>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<br />
+<div style="text-align:center">
+    <a asp-action="Index">Convertir en Empleado</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
+    <a asp-action="Index"><- Regresar</a>
 </div>
