--- a/TalentCorp/Views/Entrevistas/Create.cshtml
+++ b/TalentCorp/Views/Entrevistas/Create.cshtml
@@ -5,35 +5,64 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<style>
 
-<h4>Entrevista</h4>
+    .card {
+        width: 40%;
+        border-radius: 8px;
+        margin-left: 30%;
+        margin-right: 30%;
+        box-shadow: 0px 0px 5px 5px rgb(0 0 0 / 20%);
+        text-align: justify;
+    }
+
+    .formu {
+        padding-top: 5%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+        padding-left: 10%;
+    }
+
+    .formuContent {
+        margin-bottom: 5%;
+    }
+
+    .logo {
+        padding-top: 1%;
+        position: relative;
+        font-weight: bold;
+        text-align: center;
+    }
+</style>
+
+<h3 class="logo">Agregar entrevista</h3>
+
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card">
+    <div class="formu">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="CandidatoId" class="control-label">Candidato</label>
                 <select asp-for="CandidatoId" class ="form-control" asp-items="ViewBag.CandidatoId"></select>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="PuestoId" class="control-label">Puesto</label>
                 <select asp-for="PuestoId" class ="form-control" asp-items="ViewBag.PuestoId"></select>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="FechaEntrevista" class="control-label">Fecha</label>
                 <input asp-for="FechaEntrevista" class="form-control" />
                 <span asp-validation-for="FechaEntrevista" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="text-align:right">
+                <input type="submit" value="Agregar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"> <- Regresar </a>
 </div>
 
