--- a/TalentCorp/Views/Entrevistas/Index.cshtml
+++ b/TalentCorp/Views/Entrevistas/Index.cshtml
@@ -69,8 +69,8 @@
     <tbody>
 @foreach (var item in Model) {
                 <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr class="firstCell">
-            <td>
+                <tr class="rowOne">
+                    <td class="firstCell">
                 @Html.DisplayFor(modelItem => item.FechaEntrevista)
             </td>
             <td>
